# blockchain

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
plv/: types.h
plv/asio-cmake/: CMakeLists.txt
plv/backend/: blockchainservice.h  blockserializer.h  service.h
plv/crypto/: CMakeLists.txt  crypto.h  dummy.cpp
plv/dal/: CMakeLists.txt  blockchainstorage.h  blockparser.h  chunk.h  chunkiterator.h  metablock.h  storage.h
plv/datamodel/: block.h
plv/frontend/: CMakeLists.txt  consolemenu.h  consolemenuview.h  main.cpp  menucontroller.cpp  menucontroller.h  menuview.h  types.h
plv/io/: CMakeLists.txt  asyncreadwriter.h  consolereadwriter.cpp  consolereadwriter.h  file.h  filedescriptor.h  types.h
plv/serializers/: CMakeLists.txt  netstring.h
plv/tests/: CMakeLists.txt
plv/tests/backend/: CMakeLists.txt  blockchainservice_tests.cpp  mockservice.h
plv/tests/dal/: CMakeLists.txt  blockchainstorage_tests.cpp  blockparser_tests.cpp  chunkiterator_tests.cpp  mockstorage.h
plv/tests/frontend/: CMakeLists.txt  consolemenu_tests.cpp  consolemenuview_tests.cpp  menucontroller_tests.cpp  mockmenuview.h
plv/tests/io/: CMakeLists.txt  consolereadwriter_tests.cpp  mockasyncreadwriter.h  mockfile.h
plv/tests/serializers/: CMakeLists.txt  netstring_tests.cpp
plv/tests/utils/: detached.h  utils.h
src/backend/: CMakeLists.txt  block.h  blockchainservice.h  blockchainstorage.h  chunk.h  chunkiterator.h  metablock.h  netstring.h  service.h
src/frontend/: CMakeLists.txt  consolemenu.h  main.cpp  menucontroller.cpp  menucontroller.h  menuview.h
src/io/: CMakeLists.txt  asyncreadwriter.h  consolereadwriter.cpp  consolereadwriter.h  file.h  filedescriptor.h
tests/: CMakeLists.txt  detached.h
tests/backend/: CMakeLists.txt  blockchainstorage_tests.cpp  chunkiterator_tests.cpp  mockservice.h  netstring_tests.cpp
tests/frontend/: CMakeLists.txt  consolemenu_tests.cpp  menucontroller_tests.cpp  mockmenuview.h
tests/io/: CMakeLists.txt  consolereadwriter_tests.cpp  mockasyncreadwriter.h  mockfile.h
